--- a/style_contacts.css
+++ b/style_contacts.css
@@ -116,8 +116,21 @@ a {
   font-size: calc(5px + 16 * (100vw / 1280));
   padding-bottom: 8%;
   }
+}
 
-  .text {
+  .feedback-card {
+  position: relative;
+  display: block;  
+  padding: 5vh 5vw;
+  background-color: #fff;
+
+  h2 {
+    font-size: calc(18px + 16 * (100vw / 1280));
+    padding-bottom:8%;
+    font-weight: 900;
+    text-align: center;
+  }
+  input#name {
     border: 1px solid rgba(0, 0, 0, .1);
     width: 100%;
     padding: 3%;
@@ -125,17 +138,7 @@ a {
     border-radius: 10px;
     color: #333;
   }
-  .text_last{
-    border: 1px solid rgba(0, 0, 0, .1);
-    width: 100%;
-    height: 10%;
-    padding: 3%;
-    margin-bottom: 5%;
-    border-radius: 10px;
-    color: #333;
-  }
-  
-  .topic {
+  input#phone {
     border: 1px solid rgba(0, 0, 0, .1);
     width: 100%;
     padding: 3%;
@@ -143,19 +146,28 @@ a {
     border-radius: 10px;
     color: #333;
   }
-  .ui-cb-container{
-    margin-bottom: 5%;
-    color: #333;
 
-    
-    padding: 2%;
+  input#email {
+    border: 1px solid rgba(0, 0, 0, .1);
     width: 100%;
-   
-
-
+    padding: 3%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    color: #333;
   }
 
-  .btn {
+  textarea#message {
+    border: 1px solid rgba(0, 0, 0, .1);
+    height: 15vh;
+    width: 100%;
+    padding: 3%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    color: #333;
+    font-family: 'Poopins', sans-serif;
+  }
+
+  button {
     margin: 5% 30%;
     border: 0;
     border-radius: 20px;
@@ -166,6 +178,5 @@ a {
     padding: 5% 7%;
     font-weight: 700;
   }
-
 }
 }
